--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 /* Header Styles */
 header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 3rem;
   padding-bottom: 1rem;
   border-bottom: 2px solid var(--highlight-color);
