--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@ nav {
   background-color: #000;
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 nav ul {
