--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 /* Header Styles */
 header {
-  text-align: left;
+  text-align: lcenter;
   margin-bottom: 3rem;
   padding-bottom: 1rem;
   border-bottom: 2px solid var(--highlight-color);
@@ -39,7 +39,7 @@ header h1 {
 }
 
 header p {
-  font-size: 5.4rem;
+  font-size: 2.4rem;
   font-family: var(--font-secondary);
   color: var(--highlight-color);
 }
